--- a/backends/media_cpp/project/Build.xml
+++ b/backends/media_cpp/project/Build.xml
@@ -8,7 +8,7 @@
 
 		<compilerflag value="-Iinclude"/>
 		<file name="src/ExternalInterface.cpp"/>
-		<file name="src/lodepng.c"/>
+		<file name="src/lodepng.cpp"/>
 
 	</files>
 	
