Implemented jpgd Jpeg decoder for cpp(android) backend. Harmonised interface to be backwards compatible.

--- a/backends/media_cpp/project/Build.xml
+++ b/backends/media_cpp/project/Build.xml
@@ -9,6 +9,7 @@
 		<compilerflag value="-Iinclude"/>
 		<file name="src/ExternalInterface.cpp"/>
 		<file name="src/lodepng.cpp"/>
+		<file name="src/jpgd.cpp"/>
 
 	</files>
 	
