--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ backends/media_ios/ndll
 backends/media_ios/project/obj
 backends/media_cpp/ndll
 backends/media_cpp/project/obj
+backends/media_format/webp/project/obj
