--- a/backends/media_cpp/project/Build.xml
+++ b/backends/media_cpp/project/Build.xml
@@ -2,6 +2,9 @@
 
 	<include name="${HXCPP}/build-tool/BuildCommon.xml"/>
 
+	<set name="neon" value="1" unless="HXCPP_X86" />
+	<set name="sse2" value="1" if="HXCPP_X86" />
+
 	<include name="../../webp_decoder/project/PartialBuild.xml" />
 
 	<files id="src">
