--- a/backends/media_cpp/project/Build.xml
+++ b/backends/media_cpp/project/Build.xml
@@ -19,7 +19,7 @@
 
 	</files>
 
-	<target id="NDLL" output="${LIBPREFIX}media_cpp${DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
+	<target id="NDLL" output="${LIBPREFIX}media_android${DBG}${LIBEXTRA}" tool="linker" toolid="${STD_MODULE_LINK}">
 
 		<outdir name="../ndll/${BINDIR}"/>
 		<files id="src"/>
